@@ -5,7 +5,6 @@ import static ch.sbb.atlas.versioning.MergeBaseTest.MergeVersionableObject.Field
 import static ch.sbb.atlas.versioning.MergeBaseTest.MergeVersionableObject.Fields.property;
 import static ch.sbb.atlas.versioning.MergeBaseTest.MergeVersionableObject.Fields.propertyToBeIgnored;
 import static java.util.Comparator.comparing;
-import static java.util.stream.Collectors.toList;
 import static org.assertj.core.api.Assertions.assertThat;
 
 import ch.sbb.atlas.versioning.MergeBaseTest;
@@ -97,10 +96,9 @@ public class VersionableMergeScenarioTest extends MergeBaseTest {
         List.of(versionableObject1, versionableObject2, versionableObject3, versionableObject4));
 
     //then
-    assertThat(result).isNotNull();
-    assertThat(result.size()).isEqualTo(4);
+    assertThat(result).hasSize(4);
     List<VersionedObject> sortedVersionedObjects =
-        result.stream().sorted(comparing(VersionedObject::getValidFrom)).collect(toList());
+        result.stream().sorted(comparing(VersionedObject::getValidFrom)).toList();
 
     VersionedObject firstVersionedObject = sortedVersionedObjects.get(0);
     assertThat(firstVersionedObject.getAction()).isEqualTo(VersioningAction.NOT_TOUCHED);
@@ -118,7 +116,6 @@ public class VersionableMergeScenarioTest extends MergeBaseTest {
     assertThat(thirdVersionedObject.getValidTo()).isEqualTo(LocalDate.of(2024, 12, 31));
     Entity thirdVersionedObjectEntity = thirdVersionedObject.getEntity();
     assertThat(thirdVersionedObjectEntity).isNotNull();
-    assertThat(thirdVersionedObjectEntity.getProperties()).isNotEmpty();
     Property propertyThirdVersionedObjectEntity = filterProperty(
         thirdVersionedObjectEntity.getProperties(), property);
     assertThat(propertyThirdVersionedObjectEntity).isNotNull();
@@ -175,10 +172,9 @@ public class VersionableMergeScenarioTest extends MergeBaseTest {
         List.of(versionableObject1, versionableObject2, versionableObject3));
 
     //then
-    assertThat(result).isNotNull();
-    assertThat(result.size()).isEqualTo(3);
+    assertThat(result).hasSize(3);
     List<VersionedObject> sortedVersionedObjects =
-        result.stream().sorted(comparing(VersionedObject::getValidFrom)).collect(toList());
+        result.stream().sorted(comparing(VersionedObject::getValidFrom)).toList();
 
     VersionedObject firstVersionedObject = sortedVersionedObjects.get(0);
     assertThat(firstVersionedObject.getAction()).isEqualTo(VersioningAction.DELETE);
@@ -261,10 +257,9 @@ public class VersionableMergeScenarioTest extends MergeBaseTest {
             versionableObject5));
 
     //then
-    assertThat(result).isNotNull();
-    assertThat(result.size()).isEqualTo(5);
+    assertThat(result).hasSize(5);
     List<VersionedObject> sortedVersionedObjects =
-        result.stream().sorted(comparing(VersionedObject::getValidFrom)).collect(toList());
+        result.stream().sorted(comparing(VersionedObject::getValidFrom)).toList();
 
     VersionedObject firstVersionedObject = sortedVersionedObjects.get(0);
     assertThat(firstVersionedObject.getAction()).isEqualTo(VersioningAction.DELETE);
@@ -308,7 +303,6 @@ public class VersionableMergeScenarioTest extends MergeBaseTest {
     assertThat(fifthVersionedObject.getValidTo()).isEqualTo(LocalDate.of(2026, 12, 31));
     Entity fifthVersionedObjectEntity = fifthVersionedObject.getEntity();
     assertThat(fifthVersionedObjectEntity).isNotNull();
-    assertThat(fifthVersionedObjectEntity.getProperties()).isNotEmpty();
     Property propertyFifthVersionedObjectEntity = filterProperty(
         fifthVersionedObjectEntity.getProperties(), property);
     assertThat(propertyFifthVersionedObjectEntity).isNotNull();
@@ -376,10 +370,9 @@ public class VersionableMergeScenarioTest extends MergeBaseTest {
             versionableObject5));
 
     //then
-    assertThat(result).isNotNull();
-    assertThat(result.size()).isEqualTo(5);
+    assertThat(result).hasSize(5);
     List<VersionedObject> sortedVersionedObjects =
-        result.stream().sorted(comparing(VersionedObject::getValidFrom)).collect(toList());
+        result.stream().sorted(comparing(VersionedObject::getValidFrom)).toList();
 
     VersionedObject firstVersionedObject = sortedVersionedObjects.get(0);
     assertThat(firstVersionedObject.getAction()).isEqualTo(VersioningAction.DELETE);
@@ -394,7 +387,6 @@ public class VersionableMergeScenarioTest extends MergeBaseTest {
     assertThat(thirdVersionedObject.getValidTo()).isEqualTo(LocalDate.of(2024, 12, 31));
     Entity thirdVersionedObjectEntity = thirdVersionedObject.getEntity();
     assertThat(thirdVersionedObjectEntity).isNotNull();
-    assertThat(thirdVersionedObjectEntity.getProperties()).isNotEmpty();
     Property propertyThirdVersionedObjectEntity = filterProperty(
         thirdVersionedObjectEntity.getProperties(), property);
     assertThat(propertyThirdVersionedObjectEntity).isNotNull();
@@ -420,7 +412,6 @@ public class VersionableMergeScenarioTest extends MergeBaseTest {
     assertThat(fourthVersionedObject.getValidTo()).isEqualTo(LocalDate.of(2025, 12, 31));
     Entity fourthVersionedObjectEntity = fourthVersionedObject.getEntity();
     assertThat(fourthVersionedObjectEntity).isNotNull();
-    assertThat(fourthVersionedObjectEntity.getProperties()).isNotEmpty();
     Property propertyFourthVersionedObjectEntity = filterProperty(
         fourthVersionedObjectEntity.getProperties(), property);
     assertThat(propertyFourthVersionedObjectEntity).isNotNull();
@@ -446,7 +437,6 @@ public class VersionableMergeScenarioTest extends MergeBaseTest {
     assertThat(fifthVersionedObject.getValidTo()).isEqualTo(LocalDate.of(2026, 12, 31));
     Entity fifthVersionedObjectEntity = fifthVersionedObject.getEntity();
     assertThat(fifthVersionedObjectEntity).isNotNull();
-    assertThat(fifthVersionedObjectEntity.getProperties()).isNotEmpty();
     Property propertyFifthVersionedObjectEntity = filterProperty(
         fifthVersionedObjectEntity.getProperties(), property);
     assertThat(propertyFifthVersionedObjectEntity).isNotNull();
@@ -469,11 +459,10 @@ public class VersionableMergeScenarioTest extends MergeBaseTest {
 
   /**
    * Merge mit ignored property
-   *
-   * Änderung        |_______________________________|
+   * Änderung
+   * |_______________________________|
+   *     Version 1         Version 2
    * |-----------------|-------------|
-   * Version 1       Version 2
-   *
    * Ergebnis: Versionen werden gemerged
    */
   @Test
@@ -496,10 +485,9 @@ public class VersionableMergeScenarioTest extends MergeBaseTest {
         List.of(versionableObject1, versionableObject2));
 
     //then
-    assertThat(result).isNotNull();
-    assertThat(result.size()).isEqualTo(2);
+    assertThat(result).hasSize(2);
     List<VersionedObject> sortedVersionedObjects =
-        result.stream().sorted(comparing(VersionedObject::getValidFrom)).collect(toList());
+        result.stream().sorted(comparing(VersionedObject::getValidFrom)).toList();
 
     VersionedObject firstVersionedObject = sortedVersionedObjects.get(0);
     assertThat(firstVersionedObject.getAction()).isEqualTo(VersioningAction.DELETE);
@@ -511,7 +499,6 @@ public class VersionableMergeScenarioTest extends MergeBaseTest {
     assertThat(secondVersionedObject.getValidTo()).isEqualTo(LocalDate.of(2023, 12, 31));
     Entity secondVersionedObjectEntity = secondVersionedObject.getEntity();
     assertThat(secondVersionedObjectEntity).isNotNull();
-    assertThat(secondVersionedObjectEntity.getProperties()).isNotEmpty();
     Property propertySecondVersionedObjectEntity = filterProperty(
         secondVersionedObjectEntity.getProperties(), property);
     assertThat(propertySecondVersionedObjectEntity).isNotNull();
@@ -564,10 +551,9 @@ public class VersionableMergeScenarioTest extends MergeBaseTest {
         List.of(versionableObject1, versionableObject2));
 
     //then
-    assertThat(result).isNotNull();
-    assertThat(result.size()).isEqualTo(4);
+    assertThat(result).hasSize(4);
     List<VersionedObject> sortedVersionedObjects =
-        result.stream().sorted(comparing(VersionedObject::getValidFrom)).collect(toList());
+        result.stream().sorted(comparing(VersionedObject::getValidFrom)).toList();
 
     VersionedObject firstVersionedObject = sortedVersionedObjects.get(0);
     assertThat(firstVersionedObject.getAction()).isEqualTo(VersioningAction.UPDATE);
@@ -576,7 +562,6 @@ public class VersionableMergeScenarioTest extends MergeBaseTest {
     assertThat(firstVersionedObject.getValidTo()).isEqualTo(LocalDate.of(2021, 5, 31));
     Entity firstVersionedObjectEntity = firstVersionedObject.getEntity();
     assertThat(firstVersionedObjectEntity).isNotNull();
-    assertThat(firstVersionedObjectEntity.getProperties()).isNotEmpty();
     Property propertyFirstVersionedObjectEntity = filterProperty(
         firstVersionedObjectEntity.getProperties(), property);
     assertThat(propertyFirstVersionedObjectEntity).isNotNull();
